package edu.ntnu.idi.bidata.tiedy.backend.task;

/**
 * Represents the status of a task. The status can be set to one of the predefined states:
 * OPEN, IN_PROGRESS, POSTPONED, CLOSED.
 * This enum will be used to provide information about the state of a task.
 *
 * @author Odin Arvhage
 * @version 2025.02.25
 */

public enum Status {
  OPEN,
  IN_PROGRESS,
  POSTPONED,
  CLOSED
}
