classDiagram
    class Task {
        -int id
        -String title
        -String description
        -Status status
        -User assignedTo
        -Date deadline
        -start()
        -complete()
    }

    class User {
        -int userId
        -String username
        -String email
        +login()
        +logout()
    }

    class Admin {
        +manageUsers()
        +viewAllTasks()
    }

    class RegularUser {
        +viewAssignedTasks()
        +updateTaskStatus()
    }

    class Status {
        New
        Open
        In Progress
        Postponed
        Closed
    }
    class Severity {
        Critical
        High
        Medium
        Low
    }

    <<Abstract>> User
    <<enumeration>> Status
    <<enumeration>> Severity
    Task --> User: assignedTo
    Task --> Status: has
    Task --> Severity: has
    User <|-- Admin
    User <|-- RegularUser
    style Task fill: #bfb, stroke: #6f6, stroke-width: 2px, color: #000, stroke-dasharray: 5 5
    style User fill: #bfb, stroke: #6f6, stroke-width: 2px, color: #000, stroke-dasharray: 5 5
    style Status fill: #ffb, stroke: #663, stroke-width: 2px, color: #000, stroke-dasharray: 5 5
    style Severity fill: #ffb, stroke: #663, stroke-width: 2px, color: #000, stroke-dasharray: 5 5

    class Admin:::Ash
    class RegularUser:::Ash